# olx-scrapper

./: .env  .gitignore  .pre-commit-config.yaml  OLX_scrapper.ipynb  README.md  config.toml  main.py  pyproject.toml  scrapper.py
olx_scrapper/: scrapper.py
olx_scrapper/config/: __init__.py  base_settings.py
olx_scrapper/distribute/: __init__.py  channels.py  distribute.py
olx_scrapper/distribute/telegram/: __init__.py  channel.py  settings.py
olx_scrapper/message/: __init__.py  buffer.py  filter.py  message.py
olx_scrapper/runner/: __init__.py  runner.py
olx_scrapper/scrap/: __init__.py  scrap.py
